Bug 324883. Be sure to initialize variables! Fix some cases where we weren't scrolling with bitblit when we could be. r+sr=dbaron